test/e2e/chainsaw/httproute-canary-experiment/assertions/httproute-after-cleanup.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-canary-experiment
  namespace: default
spec:
  (length(rules)): 1
  rules:
    - (length(backendRefs[?name == 'httproute-canary-experiment-stable-service' && weight == `100`])): 1
      (length(backendRefs[?name == 'httproute-canary-experiment-canary-service' && weight == `0`])): 1
