test/e2e/chainsaw/httproute-canary-experiment/assertions/rollout-healthy.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: httproute-canary-experiment-rollout
  namespace: default
status:
  (phase == 'Healthy'): true
